--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,11 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: rgba(240, 240, 240);
+  background: url(assets/bg.svg) #0d0d0d;
+  background-size: 800px 800px;
+  background-repeat: no-repeat;
+  background-position: 100% 0%;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -30,8 +33,6 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
