--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
   background-size: 800px 800px;
   background-repeat: no-repeat;
   background-position: 100% 0%;
+  background-attachment: fixed;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -20,6 +21,7 @@
   -moz-osx-font-smoothing: grayscale;
 
   overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 a {
